# mc-tools

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
bots/: Cargo.toml
bots/src/: address.rs  args.rs  bot.rs  channels.rs  console.rs  context.rs  main.rs  player.rs  threading.rs
bots/src/console/: app.rs  help.txt  ui.rs
io/: Cargo.toml
io/src/: buf.rs  compression.rs  ctx.rs  error.rs  lib.rs  packet.rs  read.rs  write.rs
io/src/packet/: lazy_varint.rs
mc_io/: Cargo.toml
mc_io/src/: buf.rs  error.rs  io.rs  lib.rs  packet.rs
mc_io/src/io/: read.rs  tests.rs  write.rs
mc_io/src/packet/: compression.rs  handle.rs  helpers.rs  lazy_varint.rs
proto/: Cargo.toml
proto/src/: lib.rs  packets.rs  primitive.rs
proto/src/packets/: c2s.rs  s2c.rs
proto/src/primitive/: varint.rs
