[package]
name = "bots"
version = "0.1.0"
authors = ["Eoghanmc22 <eoghanmc@icloud.com>"]
edition = "2021"
description = "A tool to stress test minecraft servers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Networking
mio = { version = "0.8", features = ["os-poll", "net"] }
mc_io = { path = "../mc_io" }
proto = { path = "../proto" }

# UX
tui = "0.19"
crossterm = "0.25"
clap = { version = "3.2", features = ["derive"] }
ctrlc = { version = "3.0", features = ["termination"] }

# Threading
crossbeam = "0.8"

# Logging
log = "0.4"
tui-logger = "0.8"
env_logger = "0.10"

# Misc
rand = "0.8"
number_prefix = "0.4"
euclid = "0.22.7"
anyhow = "1"
