[package]
name = "mc_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = { version = "0.8", features = ["min_const_gen"] }

[dependencies]
binary = { git = "https://github.com/Moulberry/Graphite", rev = "a345e58b" }
protocol = { git = "https://github.com/Moulberry/Graphite", rev = "a345e58b" }

libdeflater = "0.10"

anyhow = "1"
thiserror = "1"
