[package]
name = "mc_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = { version = "0.8", features = ["min_const_gen"] }

[dependencies]
proto = { path = "../proto" }

libdeflater = "0.11"

thiserror = "1"
log = "0.4"
